--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 		  package="com.artufimtcev.inputbinder">
 
 	<application android:allowBackup="true"
-				 android:icon="@mipmap/ic_launcher"
-				 android:label="@string/app_name"
-				 android:supportsRtl="true"
-				 android:theme="@style/AppTheme">
+				 android:supportsRtl="true">
 
 	</application>
 
